# RoboModdingKit

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md
docs/: 01_quick_start.md  02_kit_layout.md  03_ue4ss_and_runtime.md  04_editor_project_and_jmap.md  05_dumps_sdk_assets.md  06_tooling_reference.md  07_jmap_static_mirror_learnings.md  08_notes.md  09_portable_repo.md  10_generation_pipeline.md  11_dump_from_game.md  12_first_mods.md  13_troubleshooting.md  14_suzie_dynamic_classes.md
manifests/: README.md
projects/: README.md
references/: README.md
runtime/UE4SS_patch_analysis/: ftext_patch_plan.json
templates/: README.md
tooling/external_sources/: README.md
tooling/roboquest_scripts_snapshot/: FText_Constructor.lua  ida_apply_jmap.py  ida_find_ftext.py  ida_find_ftext_v2.py  ida_find_nullsub.py  ida_find_nullsub2.py  ida_find_ue4ss_ftext_error.py  ida_ftext_deep.py  ida_hexrays_dump.py  ida_patch_ue4ss.py  ida_patch_ue4ss_v2.py  ida_verify_aob.py  inject_uevr.ps1  jmap_generate_uproject.py  jmap_to_uht.py  merge_pseudocode.py
tooling/sdk_dump_tools_snapshot/: CMakeLists.txt  README.md  build_emit.cmd  emit_genny_from_ue4ss.py  main.cpp  postprocess_generated_sdk.py  run_emit.cmd
tooling/setup/: README.md  bootstrap_external_sources.ps1  bootstrap_repo_workspace.ps1  doctor_moddingkit.ps1  dump_aes_keys.py  dump_modding_artifacts.ps1  external_sources.json  generate_editor_project.ps1  install_mod.ps1  install_suzie.ps1  materialize_engine_reference.ps1  package_mod.ps1  resolve_ue426_root.ps1  restore_game_runtime_backup.ps1  (+1 more)
(+23 files in other folders)
